# ai-study-companion

./: .env.example  .gitignore  ARCHITECTURE.md  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7a5b163f094a_create_users_and_sessions_tables.py
backend/app/: main.py
backend/app/api/v1/: main.py
backend/app/api/v1/routes/: auth.py
backend/app/core/: cache.py  config.py  limiter.py  logging.py  metrics.py  observability.py
backend/app/core/langgraph/tools/: __init__.py  ask_human.py
backend/app/core/prompts/: __init__.py  session_title.md  system.md
backend/app/models/: base.py  database.py  session.py  thread.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  chat.py  graph.py
backend/app/services/: database.py  memory.py  supabase_client.py
backend/app/services/llm/: __init__.py  registry.py  service.py
backend/app/utils/: auth.py  graph.py  sanitization.py
backend/tests/core/: test_cache.py
