[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id",
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "realtime>=2.31.0",
    "sqlmodel>=0.0.38",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
]
