[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asgi-correlation-id",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "realtime>=2.31.0",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.38",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
    "structlog>=26.1.0",
    "python-multipart>=0.0.32",
    "langchain-community>=0.4.2",
    "openai>=2.45.0",
    "langchain-openai>=1.3.3",
    "prometheus-client>=0.25.0",
    "starlette-prometheus>=0.10.0",
    "langfuse>=4.14.0",
    "redis>=8.0.1",
    "valkey[libvalkey]>=6.1.1",
    "mem0ai>=2.0.12",
]
